[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jonatas Silva"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
prospector = "^1.7.7"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
